2010-02-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/tinkerformat.cpp (OpenBabel): Add support for MMFF94
	atom typing with "-xm" flag. Fix warning from previous revision.

2010-02-15  Noel O'Boyle

	* scripts/openbabel-python.i: Get rid of warnings. Allow access to
	rotors. Tidy up the interface a bit (prevent people calling C++
	iterators, for instance)

2010-02-14  Noel O'Boyle

	* src/formats/CMakeLists.txt: Tidy up, and ensure that formats that
	formats with dependencies are included in the Windows build too.

	* src/formats/CMakeLists.txt: Group formats into four different OBF
	files
	
	* test/*: Avoid SafeOpen warnings by including obutil.h
	* src/stereo/perception.cpp: Added default to switch statement to
	avoid compiler warning about "not all paths return a value"
	* src/formats/gausscubeformat.cpp, cifformat.cpp: Added some static
	casts to avoid warnings
	* src/formats/gaussformat.cpp: Added explicit comparison against NULL
	to avoid warning
	* src/formats/cifformat.cpp: Disabled warning 4503 about very long
	decorated name being truncated. 

2010-02-13  Noel O'Boyle
	
	* src/forcefieldgaff.cpp: Fix warnings.

2010-02-13  Noel O'Boyle
	
	* test/*: Avoid SafeOpen warnings by including obutil.h
	* formats/gulpformat.cpp, inchiformat.cpp: Add some dynamic casts to
	avoid warnings

2010-02-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/CMakeLists.txt: Add FORMATDIR to point tests at appropriate
	format location.

	* test/*: Use it.

2010-02-12  Noel O'Boyle
	
	* src/formats/CMakeLists.txt: On Windows, make sure that the XML
	formats compile to the correct location. Also no need to have
	XML_INCLUDE on Windows.

2010-02-11  Noel O'Boyle
	
	* test/CMakeLists.txt: On Windows, put the test executables along with
	the compiled DLLs.

2010-02-10  Chris Morley

	* src/formats/mdlformat.cpp: allow numbers to be other than right
	justified. (As provided by Craig.)

2010-02-08  Noel O'Boyle
