@@ -51,6 +51,7 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBMCDL", "OBMCDL\MCDL.vcpro
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBMoreFormats", "OBMoreFormats\OBMoreFormats.vcproj", "{62375F2A-A2D8-4373-9E65-EC7C93A723CF}"
 	ProjectSection(ProjectDependencies) = postProject
+		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
 		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
